--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "@rollup/plugin-graphql": "^1.1.0",
     "@vue/apollo-composable": "^4.2.1",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.12.6",
